--- a/src/style.scss
+++ b/src/style.scss
@@ -456,7 +456,7 @@
         img {
           height: 500px;
           object-fit: cover;
-          object-position: top;
+          object-position: top left;
         }
       }
       .carousel-control-prev-icon,
