--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -110,6 +110,8 @@
   }
 }
 
+
+
 @media screen and (max-width: 992px) {
   /* About */
   .about-me {
@@ -170,7 +172,7 @@
     }
   }
   .project-detail {
-    .col-lg-8, 
+    .col-lg-8,
     .col-lg-4  {
       max-width: unset;
       flex: unset;
@@ -221,7 +223,28 @@
       height: 38%;
     }
   }
+
+  /* animation */
+  .animation {
+    justify-content: center;
+    .video {
+      margin: 0 auto;
+      margin-top: 60px;
+    }
+    .video-list {
+      display: inline-block;
+      margin: 30px 0;
+      iframe {
+        height: 300px;
+        margin: 30px auto;
+      }
+    }
+  }
+
 }
+
+
+
 
 @media screen and (max-width: 768px) {
 
@@ -276,6 +299,7 @@
       }
     }
   }
+
 }
 
 /* mobile size */
@@ -308,7 +332,7 @@
       height: 35%;
     }
   }
-  
+
   /* About */
   .about-me {
     top: 20px;
@@ -322,7 +346,7 @@
       transform: unset;
       left: 0;
       top: 0;
-      margin: 10% 0; 
+      margin: 10% 0;
       .polaroid:nth-child(3) {
         position: unset;
         left: 0;
@@ -361,7 +385,7 @@
   .project-list {
     margin-top: 30px;
   }
-  
+
   .project-detail {
     .content {
       width: 100%;
@@ -372,6 +396,24 @@
     }
     .carousel.slide .carousel-item img {
       height: 240px;
+    }
+  }
+
+  /* animation */
+  .animation {
+    .col-lg-6, .col-md-12 {
+      padding-left: 0px;
+      padding-right: 0px;
+    }
+    .video {
+      width: 100% !important;
+      height: 250px !important;
+    }
+    .video-list {
+      iframe {
+        height: 200px;
+        margin: 15px auto;
+      }
     }
   }
 
@@ -419,7 +461,7 @@
 
 
 
-/* Projects folder shake animation  
+/* Projects folder shake animation
   @keyframes shake {
     0% {
       transform: translate(3px, 0px)  rotate(5deg);
